Fix: Correção do caminho no atributo do usuario
COrrigindo como é salvo o caminho para a imagem no atributo do usuário